RESOLVED FIXED158622
[iOS WK2] Rare RELEASE_ASSERT under RemoteLayerTreeDrawingArea::flushLayers()
https://bugs.webkit.org/show_bug.cgi?id=158622
Summary [iOS WK2] Rare RELEASE_ASSERT under RemoteLayerTreeDrawingArea::flushLayers()
Simon Fraser (smfr)
Reported 2016-06-10 10:23:07 PDT
[iOS WK2] Rare RELEASE_ASSERT under RemoteLayerTreeDrawingArea::flushLayers()
Attachments
Patch (3.35 KB, patch)
2016-06-10 10:27 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2016-06-10 10:27:15 PDT
Tim Horton
Comment 2 2016-06-10 10:52:53 PDT
Comment on attachment 281014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=281014&action=review > Source/WebKit2/UIProcess/mac/RemoteLayerTreeDrawingAreaProxy.h:96 > + bool m_haveSentDidDUpdateSinceLastCommit { false }; DidD!
Simon Fraser (smfr)
Comment 3 2016-06-10 11:01:05 PDT
Note You need to log in before you can comment on or make changes to this bug.